processed/gerrit/txt/55537.txt
Change:     55537
Subject:    LU-17976 build: fix nla_strnid() -Werror=missing-prototypes
Link:       https://review.whamcloud.com/c/fs/lustre-release/+/55537
Change-Id:  I0225794b3fac2f36aafadff783ca921fbc757edd
Project:    fs/lustre-release
Branch:     master
Status:     MERGED
Owner:      Jian Yu
Created:    2024-06-25 23:14:03.000000000
Updated:    2024-07-08 20:12:50.000000000
Patch Set:  2
Insertions: +7
Deletions:  -6
Comments:   0 (0 unresolved)
Topic:      ubuntu2404

--- Labels ---
  Code-Review: James Simmons: +1; Shaun Tancheff: +1; Oleg Drokin: +2; Timothy Day: +1
  Verified: jenkins: +1; Maloo: +1

--- Reviewers ---
  REVIEWER: Oleg Drokin, James Simmons, Shaun Tancheff, Timothy Day

--- Commit Message ---
LU-17976 build: fix nla_strnid() -Werror=missing-prototypes

This patch explicitly defines nla_strnid() as a static function
to fix the following build failure:

  lnet/lnet/api-ni.c:2929:1: error:
  no previous prototype for 'nla_strnid' [-Werror=missing-prototypes]
   2929 | nla_strnid(struct nlattr **attr, struct lnet_nid *nid, int *rem,
        | ^~~~~~~~~~

It also fixes:
- lnet_fault_show_done()
- lnet_fault_show_start()
- lnet_fault_show_dump()
- __ll_dio_user_copy()
- ll_dio_user_copy_helper()

Change-Id: I0225794b3fac2f36aafadff783ca921fbc757edd
Fixes: f1c6623 ("LU-10391 lnet: Fault injection add/del ioctls to netlink")
Fixes: 1fa633c ("LU-17478 clio: parallelize unaligned DIO write copy")
Signed-off-by: Jian Yu <yujian@whamcloud.com>
Reviewed-on: https://review.whamcloud.com/c/fs/lustre-release/+/55537
Reviewed-by: Timothy Day <timday@amazon.com>
Reviewed-by: James Simmons <jsimmons@infradead.org>
Reviewed-by: Shaun Tancheff <shaun.tancheff@hpe.com>
Reviewed-by: Oleg Drokin <green@whamcloud.com>
Tested-by: jenkins <devops@whamcloud.com>
Tested-by: Maloo <maloo@whamcloud.com>

--- Review History ---

--- Message (Jian Yu, 2024-06-25 23:14:03.000000000) ---
Uploaded patch set 1.

--- Message (wc-checkpatch, 2024-06-25 23:16:03.000000000) ---
Patch Set 1:

Looks good to me.

--- Message (Jian Yu, 2024-06-25 23:17:34.000000000) ---
Topic set to ubuntu2404

--- Message (Timothy Day, 2024-06-25 23:36:24.000000000) ---
Patch Set 1: Code-Review+1

--- Message (James Simmons, 2024-06-25 23:39:25.000000000) ---
Patch Set 1: Code-Review+1

--- Message (jenkins, 2024-06-26 00:07:29.000000000) ---
Patch Set 1: Verified+1

Build Successful 

https://build.whamcloud.com/job/lustre-reviews/105708/ : SUCCESS

--- Message (Shaun Tancheff, 2024-07-05 10:15:31.000000000) ---
Patch Set 1: Code-Review+1

--- Message (Oleg Drokin, 2024-07-08 20:12:47.000000000) ---
Patch Set 1: Code-Review+2

--- Message (Oleg Drokin, 2024-07-08 20:12:50.000000000) ---
Change has been successfully cherry-picked as 3fe8d551cb945c5ad10ebf6fd6e28915e28a8423 by Oleg Drokin
